--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -3,7 +3,7 @@ nav{
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 130px;
+    height: 20vh;
 }
 
 
@@ -38,12 +38,32 @@ ul li {
     padding-bottom: 20px;
 }
 
+Link{
+    text-decoration: none;
+}
+
 #user-logo{
     width: 20px;
 }
 
 #menu{
     display: none;
+}
+
+
+.rodape{
+    background-color: #89BF11;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    height: 20vh;
+    margin-top: 20px;
+    align-items: center;
+}
+
+#logo-rodape{
+    width: 200px;
 }
 
 @media only screen and (max-width: 768px) {
