--- a/src/css/App.css
+++ b/src/css/App.css
@@ -109,10 +109,31 @@ margin: 0 auto;
 .text-one{
   width: 100%;
   margin: 20px auto;
+  display: flex;
+  flex-direction: column;
 }
 
-h1{
-  margin: 20px auto;
+#coleta{
+  font-size: 20px;
+  margin: 10px auto;
+}
+
+
+.texto-um{
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.texto-um p{
+color: black;
+font-size: 10px;
+}
+
+#notebook-image{
+  height: 200px;
+  width: 300px;
+  margin-top: 50px;
 }
 
 p{
@@ -121,6 +142,7 @@ p{
   text-align: center;
 }
 
+
 .text-two{
   width: 100%;
   margin: 20px auto;
@@ -128,15 +150,17 @@ p{
   flex-direction: column;
 }
 
-h2{
-  margin: 20px auto;
+#h2-text-two{
+  font-size: 16px;
 }
 
 .start-button{
   margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .text-three{
+  display: flex;
   flex-direction: column;
 }
 
@@ -151,6 +175,21 @@ h2{
   padding: 10px;
   text-align: center;
   width: fit-content;
+}
+
+.text-four{
+  display: flex;
+  flex-direction: column;
+}
+
+#imagem-linha{
+  width: 60%;
+}
+
+#iphone{
+  display: flex;
+  width: 250px;
+  margin: 0 auto;
 }
 
 
