--- a/src/css/Maps.css
+++ b/src/css/Maps.css
@@ -2,4 +2,15 @@ h1{
     display: flex;
     width: fit-content;
     margin: 20px auto;
+    font-size: 34px;
+}
+
+
+
+@media only screen and (max-width: 768px) {
+
+h1{
+    font-size: 30px;
+}
+
 }
