--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -1,9 +1,12 @@
+
+
+
 nav{
     background-color: #89BF11;
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 20vh;
+    height: 10vh;
 }
 
 
@@ -11,16 +14,21 @@ nav{
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
+.nav-div-principal{
+    display: flex;
+    flex-direction: column;
+}
+
 #logo{
-    width: 300px;
+    width: 150px;
 }
 
 
-ul{
+#lista-display{
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -29,7 +37,11 @@ ul{
     
 }
 
-ul li {
+ul{
+    list-style: none;
+}
+
+#lista-display li {
     font-family: 'Poppins', sans-serif;
     color: #FFFFFF;
     padding-left:  60px;
@@ -57,30 +69,44 @@ Link{
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     margin-top: 20px;
     align-items: center;
+    list-style: none;
 }
 
 #logo-rodape{
     width: 200px;
 }
 
+#listaFooter{
+    display: flex;
+    flex-direction: row;
+}
+
+#listaFooter li {
+    color: white;
+    font-size: 13px;
+    padding: 0 40px;
+}
+
 @media only screen and (max-width: 768px) {
 
 
     #logo{
-        width: 180px;
-        align-self: center;
-        height: 120px;
+        width: 130px;
+        height: 70px;
+        position: absolute;
+        top: 5px;
+        left: 35px
     }
 
-    ul{
+    #lista-display{
         margin-top: 15px;
         display: none;
 
     }
-    ul li {
+    #lista-display li {
         padding-bottom: 10px;
         padding-left: 40px;
     }
@@ -92,4 +118,41 @@ Link{
         right: 20px;
         cursor: pointer;
     }
+
+    #logo-rodape{
+        width: 150px;
+    }
+
+    .rodape{
+        background-color: #89BF11;
+        flex-direction: column;
+        height: 25vh;
+        align-items: center;
+    }
+
+    #listaFooter{
+        display: flex;
+        flex-direction: row;
+    }
+
+    #listaFooter li {
+        padding-left: 32px;
+        color: white;
+        font-size: 13px;
+    }
+
+    .menu.menuOpen{
+        display: flex;
+    }
+
+    .menu.menuClose {
+        display: none;
+        width: 0px;
+    }
+
+    #button-menu{
+        height: 10px;
+        width: 10px;
+    }
+
   }
