--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -7,11 +7,12 @@
 
 .div-login{
     width: 100%;
-    height: 61.8vh;
+    height: 65.8vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    background-color: aliceblue;
 }
 
 h2{
@@ -28,14 +29,17 @@ form{
     flex-direction: column;
     margin: 20px auto;
     font-family: 'Poppins', sans-serif;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 input{
-    margin-top: 20px;
+    margin: 20px 0 30px 0;
     text-align: center;
     width: 400px;
     border-radius: 5px;
     height: 30px;
+    font-size: 10px;
 }
 
 
@@ -64,7 +68,7 @@ button{
 @media only screen and (max-width: 768px) {
 
 main{
-    max-width: 100vh;
+    max-width: 100%;
 }
 
 .div-login{
@@ -76,9 +80,9 @@ main{
 }
 
 h2{
-    font-size: 14px;
+    font-size: 18px;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 20px;
     display: inline-block;
 }
 
@@ -98,6 +102,11 @@ label{
 
 .crie-cadastro p{
     font-size: 12px;
+}
+
+h3{
+    font-size: 12px;
+
 }
 
 
