--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -70,7 +70,6 @@ Link{
     justify-content: space-around;
     width: 100%;
     height: 25vh;
-    margin-top: 20px;
     align-items: center;
     list-style: none;
 }
@@ -93,9 +92,12 @@ Link{
 @media only screen and (max-width: 768px) {
 
 
+    nav{
+        height: 12vh;
+    }
     #logo{
         width: 130px;
-        height: 70px;
+        height: 55px;
         position: absolute;
         top: 5px;
         left: 35px
