--- a/src/css/App.css
+++ b/src/css/App.css
@@ -116,7 +116,6 @@ margin: 0 auto;
 
 #coleta{
   font-size: 20px;
-  margin: 10px auto;
 }
 
 
@@ -124,6 +123,8 @@ margin: 0 auto;
   max-width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 10px -15px;
+
 }
 
 .texto-um p{
